--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "symfony/validator": "5.2.*",
         "symfony/web-link": "5.2.*",
         "symfony/yaml": "5.2.*",
+        "twbs/bootstrap": "5.0.0-beta1",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
