--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "symfony/yaml": "5.2.*",
         "twbs/bootstrap": "5.0.0-beta1",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+      "ext-http": "*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
