--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "bootstrap": "^4.4.1",
+    "bootswatch": "^4.5.3",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1"
   },
